syntax = "proto3";
package cloudlet.agent;
import "google/protobuf/empty.proto";

message ExecuteRequest {
  enum Action {
    RUN = 0;
    PREPARE = 1;
    PREPARE_AND_RUN = 2;
  }

  string workload_name = 1;
  string language = 2;
  Action action = 3;
  string code = 4;
  string config_str = 5;
}

message ExecuteResponse {
  enum Stage {
    PENDING = 0;
    BUILDING = 1;
    RUNNING = 2;
    DONE = 3;
    FAILED = 4;
    DEBUG = 5;
  }

  Stage stage = 1;
  optional string stdout = 2;
  optional string stderr = 3;
  optional int32 exit_code = 4;
}

message SignalRequest {
  enum Signal {
    KILL = 0;
  }
}

service WorkloadRunner {
  rpc Execute(ExecuteRequest) returns (stream ExecuteResponse) {}
  rpc Signal(SignalRequest) returns (google.protobuf.Empty) {}
}
